--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
 
     <div class="content--section container">
-      <h1 class="title1">title</h1>
-      <h2 class="title2">title</h2>
-      <h1 class="title3">title</h1>
-      <h2 class="title4">title</h2>
+      <h1 class="title">title</h1>
+      <h2 class="title">title</h2>
+      <h1 class="title">title</h1>
+      <h2 class="title">title</h2>
     </div>
   </body>
 </html>
